--- a/sites/css/mangostyle.css
+++ b/sites/css/mangostyle.css
@@ -33,6 +33,16 @@ a {
 	display: block;
 }
 
+#link {
+	font-size: 50px;
+	margin: 0 auto;
+	margin-top: 10px;
+	width: 500px;
+	height: 469px;
+	background: transparent url(mango.png) no-repeat;
+	background-position: center top 50px;
+}
+
 #link1 {
 	font-size: 2px;
 	margin: 0 auto;
